Fazendo o CSS e arrumando bugs

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <main>
         <section id = 'Maze'>
         </section>
+        <button id = 'playAgain'>Play Again</button>
     </main>
+
 
     <script src="script.js"></script>
 </body>
