--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Escape the maze</title>
 </head>
 <body>
     <main>
         <section id = 'Maze'>
         </section>
-        <button id = 'playAgain'>Play Again</button>
+        <button id = 'playAgain' class = 'hidden'>Play Again</button>
+        <div id = 'victoryMessage' class = 'hidden'>Você escapou !!</div>
     </main>
 
 
